Add image and basic styles

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,12 @@
 <h1>Smitty</h1>
 
-<p>Smitty is a tool that automatically changes the Terminal theme when you open a new Tab or Window.</p>
+<div class="intro cfix">
+    <img src="screenshot.png" class="screenshot">
 
-<p>It's written in ruby and apple script, and all the code lives off your home directory, so it's easy to tweak or hack.</p>
+    <p>Smitty is a tool that automatically changes the Terminal theme when you open a new Tab or Window.</p>
+
+    <p>It's written in ruby and apple script, and all the code lives off your home directory, so it's easy to tweak or hack.</p>
+</div>
 
 <p>You should be able to install it from a default Mac OS install, just type:</p>
 
