--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,6 +1,8 @@
 <html>
     <head>
         <title>Smitty</title>
+        <link href="style.css" type="text/css" rel="stylesheet"/>
+        
     </head>
-    <body><%= yield %></body>
+    <body><div class="container"><%= yield %></div></body>
 </html>
